--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 #playPause {
-    background-image: url('/assets/play.png') ;
+    background-image: url('../assets/play.png') ;
     background-size: cover;
     width: 50px ;
     height: 50px ;
